# mihuatang-embedded

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/command_dispatcher/: CMakeLists.txt
components/command_dispatcher/include/: command_dispatcher.h
components/command_dispatcher/src/: command_dispatcher.c
components/compressor_control/: CMakeLists.txt  Kconfig
components/compressor_control/include/: compressor_control.h
components/compressor_control/src/: compressor_control.c
components/dc_motor_control/: CMakeLists.txt
components/dc_motor_control/include/: dc_motor_control.h
components/dc_motor_control/src/: dc_motor_control.c
components/dht22_sensor/: CMakeLists.txt
components/dht22_sensor/include/: dht22_sensor.h
components/dht22_sensor/src/: dht22_sensor.c
components/ds18b20_manager/: CMakeLists.txt
components/ds18b20_manager/include/: ds18b20_manager.h
components/ds18b20_manager/src/: ds18b20_manager.c
components/fan_controller/: CMakeLists.txt
components/fan_controller/include/: fan_controller.h
components/function_controller/: CMakeLists.txt
components/led_controller/: CMakeLists.txt
components/relay_module/: CMakeLists.txt
components/relay_module_two/: CMakeLists.txt
components/shake_motor_module/: CMakeLists.txt
components/steam_valve_module/: CMakeLists.txt
components/stepper_motor_module/: CMakeLists.txt
components/uart_service/: CMakeLists.txt  Kconfig
components/water_level_sensor_module/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
(+19 files in other folders)
